syntax = "proto3";  // 使用Protobuf版本3

package runtime.aot.machine_learning.parents.vertex;

service VertexInferenceService {
    rpc Predict (Requests) returns (Response);
    rpc PredictWithStream (Requests) returns (stream Response);
}
//Global
message Messages{
    int64 unknown = 1; // 也许只是常量1(请求)/3(回应)
    string message = 2; // 消息
}

// Requests
message Requests {
    string models = 1; // 模型名称
    Args args = 2;
}

message Args {
  reserved 1;
  Messages messages = 2; // 消息,可以视作user
  string rules = 3; // 规则,可以视作system
}

// Response
message Response {
    int64 response_code = 2; // 返回状态码，200，439等
    Args1 args = 4;
}

message Args1{
  Args2 args = 1; // 不知道什么意义的套一层
}

message Args2{
    Messages args = 2; // 不知道什么意义的套一层
}
